--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1048,6 +1048,10 @@ public class DoubleLinkedListDemo {
 
 ## 1.2 工具类Arrays、 Collections
 
+两种类常用方法详细可见[👀收藏的方法与函数](/Project/java方法/java方法.md)
+
+为什么放收藏的方法与函数里呢，难道你用方法还去笔记里找吗，肯定是有一个方法收藏集更快吧
+
 - Arrays
 
 ~~~java
@@ -1064,12 +1068,22 @@ public class DoubleLinkedListDemo {
         //5、查找值在arr的位置，如果找到了，返回索引
 		// 如果没有找到，那么把返回(-(point) - 1)
 		//point：这个新元素安排进去的位置 
-        int index = Arrays.binarySearch(arr, 9); // 返回的是目标在排好序的数组中的索引，可以插入6号索引，所以这里返回（-6）-1  ，即-7
+        int index = Arrays.binarySearch(arr, 9); // 返回的是目标在排好序的数组中的索引，目标可以插入6号索引，所以这里返回（-6）-1  ，即-7
         System.out.println(Arrays.toString(arr));
         System.out.println(index);
 ~~~
 
+- Collections
 
+~~~java
+  // Collections.sort(list); // 排序
+
+        // Collections.binarySearch() // 二分查找
+
+        // Collections.reverse(list)// 倒序
+
+        // Collections.shuffle(); // 乱序
+~~~
 
 ## 1.3 sort()， Comparable让对象可以进行比较
 
