--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1040,9 +1040,13 @@ public class DoubleLinkedListDemo {
 
 # 🎈🎈课堂笔记
 
-# 1、高级\_集合框架分支2022_07_21
+# ✨高级\_集合框架分支_07_21
 
-## 1.1 map和set见上面第18点
+## 1.1 map和set
+
+~~~java
+见上面经验总结第18点
+~~~
 
 
 
@@ -1384,6 +1388,211 @@ public class QuickSort {
 
 
 
+# ✨高级\_异常分支_07_22
+
+## 1、集合的foreach问题
+
+~~~java
+for (String s : list) { // 在执行的时候，会默认调用
+            System.out.println(s);
+        }
+~~~
+
+会默认调用Iterator，所以自己写的MyArrayList<T> implements List<T>中要重写一个Itr<T> implements Iterator<T>，来实现hasNext和next，再利用下面代码来调用
+
+~~~java
+public Iterator<T> iterator() {
+        return new Itr<>();
+    }
+~~~
+
+
+
+## 2、异常
+
+### 2.1简介
+
+~~~java
+			  ——————————Exception（需要捕捉或需要程序进行处理的异常）
+			  |		|
+父类Throwable——|	   ————RuntimeException
+              |
+			  ————————Error（系统级的错误）
+~~~
+
+Error类：Error表示系统级的错误，一般是由于硬件或运行环境方面的异常，例如内存溢出、虚拟机出错、连接错误等，这类错误不由程序抛出，而且对于这种情况，一般是不用修改程序的，因为程序也无能为力，只能停止运行。 
+
+Exception类：Exception类表示需要捕捉或需要程序进行处理的异常，它的出现原因是程序设计错误或外界输入引起的，是程序必须进行相应处理的。
+
+Java中Exception又分为2种异常类型
+	RuntimeException 不受检测异常（不太严重的问题），就算是有这种发生问题的可能性，既不要try-catch，也不需要throws
+	非RuntimeException的子类 受检测异常（较为严重的问题），编译器强制要求开发人员面对这个问题：
+		//1、自己来处理，编写try-catch
+		// 2、自己不处理，在方法上添加throws XxxException，它的用意是告诉调用这个方法的人，这个方法会有发生错误的风险，你需要注意
+
+**try-catch-throw**
+
+其中关键字**try表示定义一个受到监控、受到保护的程序代码块**；关键字catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；而throw则是检测到一个异常错误发生后向外抛出一个异常事件，通知对应的catch程序块执行对应的错误处理。
+
+### 2.2使用方法
+
+🎨 exception+try-catch
+
+~~~java
+public class TestException {
+    public static void main(String[] args) {
+        try {
+            int num=10/0;
+
+        }catch (Exception e){
+            e.printStackTrace();
+        }
+        System.out.println("123");
+    }
+~~~
+
+🎨抛出异常
+
+1 抛出运行时异常：**throw** new XXXXXX
+
+RuntimeException
+
+~~~java
+ if (!("admin".equals(name) && "admin".equals(pwd))) {
+             // 手工制造一个异常，达到中断程序运行的效果
+             throw new RuntimeException("用户名或密码错误");
+}
+~~~
+
+2 抛出受检测异常：方法**throws** Exception
+
+抛皮球，不处理给上层
+
+~~~java
+public class Account {
+    public void deposit(float value) throws FileNotFoundException {    
+        var reader = new FileReader("xxx.md");
+   }
+}
+~~~
+
+🎨自定义异常
+
+~~~java
+class ValidateRuntimeException extends RuntimeException{
+    ValidateRuntimeException(String msg) {
+        super(msg);
+    }
+}
+class NetworkRuntimeException extends RuntimeException{
+    NetworkRuntimeException(String msg) {
+        super(msg);
+    }
+}
+~~~
+
+
+
+### 2.3 场景应用
+
+需求：假如用户的需求：即使有一个文件存在问题，也不要中断整批校验
+
+~~~java
+package com.think.lv2.exception;
+import java.util.ArrayList;
+import java.util.List;
+public class Main {
+    public static void main(String[] args) throws Exception {
+        
+        String[] arr = {"a", "bxx", "c"};
+  		//程序主体
+        //返回错误的集合
+        List<String> errors = batchValidate(arr);
+      
+        System.out.println("批量处理完毕");
+        System.out.println(errors);
+
+        // 批量处理总结
+        // 1 OK
+        // 2 ERROR:
+        // 3 ...
+    }
+
+    // 假如用户的需求：即使有一个文件存在问题，也不要中断整批校验
+    private static List<String> batchValidate (String[] arr) {
+        List<String> errors = new ArrayList<>();
+        for (String s : arr) {
+            try {
+                //长度大于1抛出异常
+                validateItem(s); // bxx抛出了一个错误
+               //count==1抛出异常
+                saveItem(s);
+            } catch (Exception e) { 
+                // 如果try里面发生的错误，是参数声明的类型，就会执行catch中的逻辑
+                // 判断错误参数声明的类型
+                if(e instanceof NetworkRuntimeException){
+                    errors.add(e.getMessage());
+                }
+                if(e instanceof ValidateRuntimeException){
+                    errors.add(e.getMessage());
+                }
+                e.printStackTrace();
+            }
+        }
+        System.out.println("批量校验完毕！");
+        return errors;
+    }
+
+    static int count;
+    
+    static void saveItem(String s) {
+        if (count++ == 1) throw new NetworkRuntimeException("网络链接错误");
+        System.out.println("把视频保存起来");
+        // 网络连接的问题
+    }
+
+    private static void validateItem(String s) { // 踢皮球
+        if (s.length() > 1) {
+            throw new ValidateRuntimeException("字符串长度不符合要求");
+            // System.out.println("不符合要求");
+        } else {
+            System.out.println(s + "是合乎要求的");
+        }
+    }
+    // 有的时候，我们需要根据需求的业务逻辑来进行判断，决定是否中断程序运行
+
+}
+//两个自定义异常
+class ValidateRuntimeException extends RuntimeException{
+    ValidateRuntimeException(String msg) {
+        super(msg);
+    }
+}
+class NetworkRuntimeException extends RuntimeException{
+    NetworkRuntimeException(String msg) {
+        super(msg);
+    }
+}
+
+//结果
+a是合乎要求的
+把视频保存起来
+com.think.lv2.exception.ValidateRuntimeException: 字符串长度不符合要求
+	at com.think.lv2.exception.Main.validateItem(Main.java:82)
+	at com.think.lv2.exception.Main.batchValidate(Main.java:55)
+	at com.think.lv2.exception.Main.main(Main.java:34)
+c是合乎要求的
+com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
+	at com.think.lv2.exception.Main.saveItem(Main.java:75)
+	at com.think.lv2.exception.Main.batchValidate(Main.java:56)
+	at com.think.lv2.exception.Main.main(Main.java:34)
+批量校验完毕！
+批量处理完毕
+[字符串长度不符合要求, 网络链接错误]
+
+//细节，为什么c没有输出“把视频保存起来”
+//因为if (count++ == 1) 为false时不会执行++
+~~~
 
 
 
@@ -1391,9 +1600,10 @@ public class QuickSort {
 
 
 
-# —————分割线—————————
 
-# 问题收纳
+# 🧨🧨🧨🧨分割线🧨🧨🧨🧨
+
+# 🎈🎈问题收纳
 
 ## 1、如何理解类和对象
 
