--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1040,7 +1040,7 @@ public class DoubleLinkedListDemo {
 
 # 🎈🎈课堂笔记
 
-# ✨高级\_集合框架分支_07_21
+# ✨高级\_集合框架_07_21
 
 ## 1.1 map和set
 
@@ -1388,7 +1388,7 @@ public class QuickSort {
 
 
 
-# ✨高级\_异常分支_07_22
+# ✨高级\_异常_07_22
 
 ## 1、集合的foreach问题
 
@@ -1413,26 +1413,29 @@ public Iterator<T> iterator() {
 ### 2.1简介
 
 ~~~java
-			  ——————————Exception（需要捕捉或需要程序进行处理的异常）
-			  |		|
-父类Throwable——|	   ————RuntimeException
+			  ——————————Exception（需要捕捉或需要程序进行处理的异常）——————RuntimeException
+			  |													|
+父类Throwable——|	  											   ——-其他
               |
 			  ————————Error（系统级的错误）
 ~~~
 
-Error类：Error表示系统级的错误，一般是由于硬件或运行环境方面的异常，例如内存溢出、虚拟机出错、连接错误等，这类错误不由程序抛出，而且对于这种情况，一般是不用修改程序的，因为程序也无能为力，只能停止运行。 
+- `Error类`：Error表示系统级的错误，一般是由于硬件或运行环境方面的异常，例如内存溢出、虚拟机出错、连接错误等，这类错误不由程序抛出，而且对于这种情况，一般是不用修改程序的，因为程序也无能为力，只能停止运行。 
 
-Exception类：Exception类表示需要捕捉或需要程序进行处理的异常，它的出现原因是程序设计错误或外界输入引起的，是程序必须进行相应处理的。
+- `Exception类`：Exception类表示需要捕捉或需要程序进行处理的异常，它的出现原因是程序设计错误或外界输入引起的，是程序必须进行相应处理的。
 
 Java中Exception又分为2种异常类型
-	RuntimeException 不受检测异常（不太严重的问题），就算是有这种发生问题的可能性，既不要try-catch，也不需要throws
-	非RuntimeException的子类 受检测异常（较为严重的问题），编译器强制要求开发人员面对这个问题：
-		//1、自己来处理，编写try-catch
-		// 2、自己不处理，在方法上添加throws XxxException，它的用意是告诉调用这个方法的人，这个方法会有发生错误的风险，你需要注意
 
-**try-catch-throw**
+- `RuntimeException `不受检测异常（不太严重的问题），就算是有这种发生问题的可能性，既不要try-catch，也不需要throws
+- `非RuntimeException的子类` 受检测异常（较为严重的问题），编译器强制要求开发人员面对这个问题：
+  		//1、自己来处理，编写try-catch
+    		// 2、自己不处理，在方法上添加throws XxxException，它的用意是告诉调用这个方法的人，这个方法会有发生错误的风险，你需要注意
+
+- **try、catch、throw**
 
 其中关键字**try表示定义一个受到监控、受到保护的程序代码块**；关键字catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；而throw则是检测到一个异常错误发生后向外抛出一个异常事件，通知对应的catch程序块执行对应的错误处理。
+
+- `finally`语句块无论是否发生异常，始终都会执行。
 
 ### 2.2使用方法
 
@@ -1453,7 +1456,7 @@ public class TestException {
 
 🎨抛出异常
 
-1 抛出运行时异常：**throw** new XXXXXX
+抛出运行时异常：**throw** new XXXXXX
 
 RuntimeException
 
@@ -1464,7 +1467,7 @@ RuntimeException
 }
 ~~~
 
-2 抛出受检测异常：方法**throws** Exception
+🎨抛出受检测异常：方法**throws** Exception
 
 抛皮球，不处理给上层
 
@@ -1489,6 +1492,35 @@ class NetworkRuntimeException extends RuntimeException{
         super(msg);
     }
 }
+~~~
+
+🎨finally语句块
+
+~~~java
+  public static void main(String[] args) {
+         System.out.println(test(false)); 
+    }     
+static int test(boolean flag) {
+         try {
+             System.out.println(0);
+             if (flag) {
+                 throw new Exception("手工异常");
+             }
+             System.out.println(1);
+             return 1;
+         } catch (Exception e) {
+             System.out.println(2);
+         } finally {
+             System.out.println(33); // 无论发生异常与否，都一定会执行
+             return 2;
+         }        
+     }
+//结果	flag为false
+//0
+//1
+//2
+//33
+//2
 ~~~
 
 
@@ -1593,6 +1625,201 @@ com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
 //细节，为什么c没有输出“把视频保存起来”
 //因为if (count++ == 1) 为false时不会执行++
 ~~~
+
+
+
+# ✨高级\_IO_07_22
+
+## 1、File
+
+### 1.1 测试File
+
+~~~java
+public static void main(String[] args) {
+        String path="D:\\java111\\123\\work";
+        testFile(path);
+        }
+static void testFile(String path) {
+        File file = new File(path);
+        System.out.println(file.isFile());	//是否为文件
+        System.out.println(file.isDirectory());//是否为目录
+    }
+//结果
+false
+true
+~~~
+
+
+
+### 1.2 常用API
+
+- file.mkdir() 创建文件夹
+- file.delete() 删除
+- file.getTotalSpace() 获取文件大小
+- file.getParentFile() 获取父节点
+- file.exists() 是否存在
+
+
+
+### 1.3 显示目录下所有文件
+
+~~~java
+public static void main(String[] args) {
+        treeWalk(path);
+        copy();
+    }
+  private static void treeWalk(String path) {
+        File file = new File(path);
+      //如果为文件就打印出来
+        if (file.isFile()) System.out.println(file.getName());
+        else {
+        //否则递归遍历子目录
+            File[] files = file.listFiles();
+            for (File children : files) {
+                treeWalk(children.getAbsolutePath());//绝对路径
+            }
+        }
+
+    }
+//结果
+COMMIT_EDITMSG
+config
+description
+FETCH_HEAD
+HEAD
+applypatch-msg.sample
+commit-msg.sample
+fsmonitor-watchman.sample
+post-update.sample
+............略
+~~~
+
+
+
+### 1.4 匿名内部类+过滤器
+
+接口名就是类型，而{}中的逻辑，就是一个动态代码块，里面是接口中所有抽象方法的具体实现
+
+```java
+//将后缀为.java的文件输出  
+static FilenameFilter filter = new FilenameFilter() {
+         @Override
+         public boolean accept(File dir, String name) {
+             if (name.endsWith(".java"))
+                 System.out.println(">>>>" + name);
+             return false;
+         }
+     };
+```
+
+- Lambda 表达式实现
+
+~~~java
+  static FilenameFilter filter = (dir, name) -> {
+        if (name.endsWith(".java"))
+            System.out.println(">>>>" + name);
+        return true;
+    };
+~~~
+
+
+### 1.5 字节流实现copy
+
+#### 1.5.1FileInputStream+FileOutputStream
+
+~~~java
+ static void copy() {
+        String src = "/Users/cuesky/Desktop/adv.mp4";
+        String dest = "/Users/cuesky/Desktop/advCopy.mp4";
+        try (
+        // 只要括号中的组件实现了Closeable接口，JVM会自动帮程序来关闭
+        // in.close() out.close()
+        // 它们并非是为了释放JVM中相应的内存，因为JVM中有GC可以自动管理
+        // 主要是为了，Java程序申请的硬件资源，通知它们可以释放了
+        // 如果没有释放的话，会发生系统崩溃，因为比如OS一般都有同时可以打开多少个文件的限制（65536）
+       InputStream in = Files.newInputStream(Paths.get(src));
+       OutputStream out = new FileOutputStream(dest);
+       MyResource r = new MyResource()
+        ) {
+      // int b = in.read();// 以字节为单位读取文件
+      // out.write(b); // 以字节为单位输出数据到文件中
+      byte[] buffer = new byte[1024]; // 以1kb为缓冲来读取
+      int len; // 用来记录in实际读取的文件长度
+     while (  (len = in.read(buffer)) != -1) {
+                // 参数2：从buffer的第几个位置开始读取
+                // 参数3：一共读取多少到新文件中去
+                out.write(buffer, 0, len);
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+~~~
+
+#### 1.5.2BufferedInputStream+BufferedOutputStream(有缓存区更快)
+
+~~~java
+ static void bufferd() {
+        String src = "/Users/cuesky/Desktop/adv.mp4";
+        String dest = "/Users/cuesky/Desktop/advCopy.mp4";
+        try (
+                InputStream in = new FileInputStream(src);
+                BufferedInputStream bis = new BufferedInputStream(in); // 带内部缓冲的输入流
+                OutputStream out = new FileOutputStream(dest);
+                BufferedOutputStream bos = new BufferedOutputStream(out);
+        ) {
+            byte[] buffer = new byte[1024];
+            int len;
+            while ((len = bis.read(buffer)) != -1) {
+                bos.write(buffer, 0, len);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+~~~
+
+
+
+### 1.6 字符流实现写文件
+
+BufferedWriter+BufferedWriter
+
+- 其中 BufferedWriter writer = new BufferedWriter(new FileWriter(src, true));的true可以实现续写
+
+~~~java
+append – boolean if true, then data will be written to the end of the file rather than the beginning.
+~~~
+
+代码
+
+~~~java
+  static void charWrite() {
+        String src = "/Users/cuesky/Desktop/a1.txt";
+        Scanner scanner = new Scanner(System.in); // 直到用户输入q，就退出，同时把前面输入给控制台的所有信息，都记录到文件中去
+        try (
+                BufferedWriter writer = new BufferedWriter(new FileWriter(src, true));
+                Reader reader = new FileReader("");
+                BufferedReader br = new BufferedReader(reader)
+        ) {
+            // writer.newLine(); // 写一个空行
+            String content;
+            while (!(content = scanner.next()).equals("q")) {
+                writer.write(content + "\r\n");
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+~~~
+
+
+
+
+
+
+
+
 
 
 
