更新work异常和笔记

--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1,4 +1,4 @@
-# experience
+experience
 
 # 🎈🎈经验总结
 
@@ -1410,32 +1410,89 @@ public Iterator<T> iterator() {
 
 ## 2、异常
 
-### 2.1简介
+### 2.1分类
+
+#### 2.1.1 父类与子类                 
+
+![image-20220722210118993](images/image-20220722210118993.png)
+
+
+
+- **Error类**：JVM内部的严重问题。无法恢复。程序人员不用处理。
+
+- **Exception类**：普通的问题。通过合理的处理，程序还可以回到正常执行流程。要求编程人员要进行处理。
+
+#### 2.1.2 检查和未检查异常
 
 ~~~java
-			  ——————————Exception（需要捕捉或需要程序进行处理的异常）——————RuntimeException
-			  |													|
-父类Throwable——|	  											   ——-其他
-              |
-			  ————————Error（系统级的错误）
-~~~
-
-- `Error类`：Error表示系统级的错误，一般是由于硬件或运行环境方面的异常，例如内存溢出、虚拟机出错、连接错误等，这类错误不由程序抛出，而且对于这种情况，一般是不用修改程序的，因为程序也无能为力，只能停止运行。 
-
-- `Exception类`：Exception类表示需要捕捉或需要程序进行处理的异常，它的出现原因是程序设计错误或外界输入引起的，是程序必须进行相应处理的。
-
 Java中Exception又分为2种异常类型
-
 - `RuntimeException `不受检测异常（不太严重的问题），就算是有这种发生问题的可能性，既不要try-catch，也不需要throws
 - `非RuntimeException的子类` 受检测异常（较为严重的问题），编译器强制要求开发人员面对这个问题：
-  		//1、自己来处理，编写try-catch
-    		// 2、自己不处理，在方法上添加throws XxxException，它的用意是告诉调用这个方法的人，这个方法会有发生错误的风险，你需要注意
+  	//1、自己来处理，编写try-catch
+   		// 2、自己不处理，在方法上添加throws XxxException，它的用意是告诉调用这个方法的人，这个方法会有发生错误的风险，你需要注意
+~~~
 
-- **try、catch、throw**
+不太直观，我直接综合下
 
-其中关键字**try表示定义一个受到监控、受到保护的程序代码块**；关键字catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；而throw则是检测到一个异常错误发生后向外抛出一个异常事件，通知对应的catch程序块执行对应的错误处理。
+**对未检查的异常(RuntimeException)的几种处理方式：**
 
-- `finally`语句块无论是否发生异常，始终都会执行。
+- 捕获
+- 继续抛出
+- 不处理
+
+**对检查的异常，除了RuntimeException，其他的异常都是检查异常的几种处理方式：**
+
+- 继续抛出，消极的方法，一直可以抛到java虚拟机来处理
+- 用try…catch捕获
+
+
+
+**try、catch、throw、finally**
+
+其中关键字**try表示定义一个受到监控、受到保护的程序代码块**；
+
+关键字catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；
+
+而throw则是检测到一个异常错误发生后向外抛出一个异常事件，通知对应的catch程序块执行对应的错误处理。
+
+finally语句块无论是否发生异常，都会执行。
+
+#### 2.1.3 方法覆盖
+
+> 子类的覆盖方法不能比父类的被覆盖方法抛出更多异常
+
+例子
+
+~~~java
+//不报错
+class MySub2 extends Super {
+    public void ma() throws EOFException, FileNotFoundException {
+
+    }
+}
+class Super{
+   public void ma()throws IOException{
+
+    }
+}
+//报错
+class MySuper{
+    public void m1() throws IOException{}
+}
+class MySub extends MySuper {
+    public void m1() throws EOFException {}
+}
+//这里报错，根据异常分类，笔记2.1的图，EOFException不包括FileNotFoundException，属于同水平
+class MySub2 extends MySub{
+    public void m1() throws  FileNotFoundException {}
+}
+~~~
+
+
+
+
+
+
 
 ### 2.2使用方法
 
@@ -1467,7 +1524,9 @@ RuntimeException
 }
 ~~~
 
-🎨抛出受检测异常：方法**throws** Exception
+🎨声明异常
+
+将当前方法中的异常交给调用者处理**：throws** Exception
 
 抛皮球，不处理给上层
 
