--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1710,7 +1710,54 @@ true
 
 
 
-### 1.2 常用API
+#### 1.1.2 绝对路径与相对路径
+
+- 绝对路径：绝对路径就是你的主页上的文件或目录在硬盘上真正的路径，(URL和物理路径)例如：C:/xyz/test.txt 代表了test.txt文件的绝对路径。http://www.sun.com/index.htm也代表了一个URL绝对路径。
+
+- 相对路径：相对与某个基准目录的路径。包含Web的相对路径（HTML中的相对目录），例如：在Servlet中，"/"代表Web应用的跟目录。和物理路径的相对表示。例如："./" 代表当前目录,"../"代表上级目录。这种类似的表示，也是属于相对路径。
+
+​	
+
+#### 1.1.3 怎么快速地在idea中找绝对路径和相对路径
+
+上图
+
+第一步，右键文件
+
+![image-20220723091223917](images/image-20220723091223917.png)
+
+第二步，选择copy path
+
+![image-20220723091307527](images/image-20220723091307527.png)
+
+第三步，得出答案
+
+![image-20220723091409891](images/image-20220723091409891.png)
+
+
+
+### 1.2流的分类
+
+1.按照输入输出分为 输入流 和 输出流
+2.按照传输单位分为 字节流 和 字符流
+3.按照功能分为 节点流（低级流） 和 处理流（高级流）
+
+- 常用的节点流
+  文 件 **FileInputStream FileOutputStrean** FileReader FileWriter 文件进行处理的节点流。
+  字符串 StringReader StringWriter 对字符串进行处理的节点流。
+  数 组 ByteArrayInputStream ByteArrayOutputStreamCharArrayReader CharArrayWriter 对数组进行处理的节点流（对应的不再是文件，而是内存中的一个数组）。
+  管 道 PipedInputStream PipedOutputStream PipedReaderPipedWriter对管道进行处理的节点流。
+
+- 常用处理流（关闭处理流使用关闭里面的节点流）
+  缓冲流：**BufferedInputStrean BufferedOutputStream BufferedReader BufferedWriter** 增加缓冲功能，避免频繁读写硬盘。
+  转换流：InputStreamReader OutputStreamReader 实现字节流和字符流之间的转换。
+  数据流 DataInputStream DataOutputStream 等-提供将基础数据类型写入到文件中，或者读取出来.
+
+  
+
+![image-20220723092004867](images/image-20220723092004867.png)
+
+### 1.3 常用API
 
 - file.mkdir() 创建文件夹
 - file.delete() 删除
@@ -1718,9 +1765,9 @@ true
 - file.getParentFile() 获取父节点
 - file.exists() 是否存在
 
+![image-20220723084327722](images/image-20220723084327722.png)
 
-
-### 1.3 显示目录下所有文件
+### 1.4 显示目录下所有文件
 
 ~~~java
 public static void main(String[] args) {
@@ -1755,7 +1802,7 @@ post-update.sample
 
 
 
-### 1.4 匿名内部类+过滤器
+### 1.5 匿名内部类+过滤器FilenameFilter
 
 接口名就是类型，而{}中的逻辑，就是一个动态代码块，里面是接口中所有抽象方法的具体实现
 
@@ -1782,9 +1829,11 @@ static FilenameFilter filter = new FilenameFilter() {
 ~~~
 
 
-### 1.5 字节流实现copy
+### 1.6 字节流实现copy
 
-#### 1.5.1FileInputStream+FileOutputStream
+#### 1.5.1 FileInputStream+FileOutputStream
+
+![image-20220723085026185](images/image-20220723085026185.png)
 
 ~~~java
  static void copy() {
@@ -1815,7 +1864,9 @@ static FilenameFilter filter = new FilenameFilter() {
     }
 ~~~
 
-#### 1.5.2BufferedInputStream+BufferedOutputStream(有缓存区更快)
+#### 1.5.2 BufferedInputStream+BufferedOutputStream(有缓存区更快)
+
+![image-20220723084904070](images/image-20220723084904070.png)
 
 ~~~java
  static void bufferd() {
@@ -1840,7 +1891,7 @@ static FilenameFilter filter = new FilenameFilter() {
 
 
 
-### 1.6 字符流实现写文件
+### 1.7 字符流实现写文件
 
 BufferedWriter+BufferedWriter
 
@@ -1858,8 +1909,8 @@ append – boolean if true, then data will be written to the end of the file rat
         Scanner scanner = new Scanner(System.in); // 直到用户输入q，就退出，同时把前面输入给控制台的所有信息，都记录到文件中去
         try (
                 BufferedWriter writer = new BufferedWriter(new FileWriter(src, true));
-                Reader reader = new FileReader("");
-                BufferedReader br = new BufferedReader(reader)
+               // Reader reader = new FileReader("");
+                //BufferedReader br = new BufferedReader(reader)
         ) {
             // writer.newLine(); // 写一个空行
             String content;
