--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1,6 +1,6 @@
-experience
+# experience
 
-# 🎈🎈经验总结
+# 🎈🎈经验总结🎈🎈
 
 ## 1、子类和父类之间构造方法
 
@@ -105,7 +105,7 @@ Sub b=new Sub();		//子类
 
 
 
-## 4、多态以及方法的调用
+## 4、多态
 
 - 多态
 
@@ -113,18 +113,15 @@ Sub b=new Sub();		//子类
   >
   > - 一个行为，在不同条件下，有不同的执行效果
   > - 在定义方法的时候，我们可以把参数类型定义的更为抽象一些，这样它就能接受所有的自类型实例，以此来提高程序的兼容性
-  >
-  > - 前提条件：必须存在继承或实现关系
-  >
   > - 表现：重写是父类与子类之间多态性的一种表现，重载是一类中多态性的表现
 
+- **多态的三大必要条件（实现）**
+
+  1.需要有继承（继承类，继承抽象类，实现接口）
+  2.需要有重写
+  3.父类型的引用执行子类型
 
 
-- 父类  character =new 子类
-
-  ~~~java
-   Super e=new Sub();
-  ~~~
 
 - **能做什么看左边，具体做什么看右边**
   - 父类中有而子类没有的方法，使用父类
@@ -132,30 +129,33 @@ Sub b=new Sub();		//子类
 
 
 
-- 父类的引用指向了子类对象（继承父类进行方法重写）
+- **使用场景**
+
+1、通过方法的参数传递形成多态
 
 ~~~java
-public class Parent {
- 
-    public void fun(){}
-}
- 
-public class Child extends Parent {
-
-    @Override
-    public void fun(){
-        //子类的重写
-    }
-}
-
-public class Demo1 {
-	
-	public static void main(String[] args) {
-		Parent parent = new Child();
-		parent.fun();
-	}
-}
+public static void draw(Super s){    
+    s.show(); 
+} 
+draw(new Sub); 
 ~~~
+
+2、在方法体中直接使用多态的语法格式
+
+~~~java
+Super s=new Sub();
+~~~
+
+3、通过方法的返回值类型形成多态
+
+~~~java
+public static Super draw(){    
+    retrun new Sub; 
+} 
+Super s=Super.draw();
+~~~
+
+
 
 - 同一个类中进行方法重载
 
@@ -178,6 +178,8 @@ public int init(){
         
 }
 ~~~
+
+
 
 
 
@@ -385,7 +387,7 @@ public interface Wifi {
 ## 15、抽象类实现接口，子类继承抽象类的关系
 
 - 一个类实现一个接口，则该类必须实现该接口中的所有方法
-- 一个抽象类实现一个接口，然后该**抽象类可以在该接口中实现任意数量的方法**
+- 一个抽象类实现一个接口，然后该**抽象类可以实现该接口中任意数量的方法**
 
 - （作业4第二题）一个类继承一个抽象类，这个抽象类实现一个接口，然后在这个子类中，**必须实现抽象类中未实现的接口方法和抽象的修改后的抽象方法**. 至于已经实现的接口方法或非抽象方法，可以重新实现或不实现
 
@@ -1034,11 +1036,43 @@ public class DoubleLinkedListDemo {
 
 
 
+## 19、Java权限修饰符有哪些？有何区别？
+
+![image-20220723140053658](images/image-20220723140053658.png)
+
+
+
+## 20、重载与重写的区别
+
+1、定义不同：重载是定义相同的方法名、参数不同，重写是子类重写父类的方法
+2、范围不同：重载是在一个类中，重写是子类与父类之间的
+3、多态不同：重载是编译时的多态性，重写是运行时的多态性
+4、参数不同：重载的参数个数、参数类型、参数的顺序可以不同，重写父类子方法参数必须相同
+5、修饰不同：重载对修饰范围没有要求，重写要求重写方法的修饰范围大于被重写方法的修饰范围
+
+
+
+## 21、开闭原则
+
+软件中的对象（类、函数、模块等）应该扩展开放，对修改关闭
+
+
+
+## 22、垃圾回收机制
+
+ 回收不可达的对象，程序员不能强制执行，只能System.gc 方法来“建议”执行
+
+
+
+## 23、
 
 
 
 
-# 🎈🎈课堂笔记
+
+
+
+# 🎈🎈课堂笔记🎈🎈
 
 # ✨高级\_集合框架_07_21
 
@@ -1447,16 +1481,6 @@ Java中Exception又分为2种异常类型
 
 
 
-**try、catch、throw、finally**
-
-其中关键字**try表示定义一个受到监控、受到保护的程序代码块**；
-
-关键字catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；
-
-而throw则是检测到一个异常错误发生后向外抛出一个异常事件，通知对应的catch程序块执行对应的错误处理。
-
-finally语句块无论是否发生异常，都会执行。
-
 #### 2.1.3 方法覆盖
 
 > 子类的覆盖方法不能比父类的被覆盖方法抛出更多异常
@@ -1496,7 +1520,11 @@ class MySub2 extends MySub{
 
 ### 2.2使用方法
 
-🎨 exception+try-catch
+#### 🎨exception+try-catch
+
+**try表示定义一个受到监控、受到保护的程序代码块**；
+
+catch与try遥相呼应，定义当try block（受监控的程序块）出现异常时，错误处理的程序模块，并且每个catch block都带一个参数（类似于函数定义时的数那样），这个参数的数据类型用于异常对象的数据类型进行匹配；
 
 ~~~java
 public class TestException {
@@ -1511,49 +1539,11 @@ public class TestException {
     }
 ~~~
 
-🎨抛出异常
 
-抛出运行时异常：**throw** new XXXXXX
 
-RuntimeException
+#### 🎨finally语句块
 
-~~~java
- if (!("admin".equals(name) && "admin".equals(pwd))) {
-             // 手工制造一个异常，达到中断程序运行的效果
-             throw new RuntimeException("用户名或密码错误");
-}
-~~~
-
-🎨声明异常
-
-将当前方法中的异常交给调用者处理**：throws** Exception
-
-抛皮球，不处理给上层
-
-~~~java
-public class Account {
-    public void deposit(float value) throws FileNotFoundException {    
-        var reader = new FileReader("xxx.md");
-   }
-}
-~~~
-
-🎨自定义异常
-
-~~~java
-class ValidateRuntimeException extends RuntimeException{
-    ValidateRuntimeException(String msg) {
-        super(msg);
-    }
-}
-class NetworkRuntimeException extends RuntimeException{
-    NetworkRuntimeException(String msg) {
-        super(msg);
-    }
-}
-~~~
-
-🎨finally语句块
+finally语句块无论是否发生异常，都会执行。
 
 ~~~java
   public static void main(String[] args) {
@@ -1580,6 +1570,52 @@ static int test(boolean flag) {
 //2
 //33
 //2
+~~~
+
+
+
+
+
+#### 🎨thorw抛出异常
+
+手动抛出运行时异常：**throw** new XXXXXX
+
+RuntimeException
+
+~~~java
+ if (!("admin".equals(name) && "admin".equals(pwd))) {
+             // 手工制造一个异常，达到中断程序运行的效果
+             throw new RuntimeException("用户名或密码错误");
+}
+~~~
+
+#### 🎨throws方法声明异常
+
+将当前方法中的异常交给调用者处理**：throws** Exception
+
+抛皮球，不处理给上层
+
+~~~java
+public class Account {
+    public void deposit(float value) throws FileNotFoundException {    
+        var reader = new FileReader("xxx.md");
+   }
+}
+~~~
+
+#### 🎨自定义异常
+
+~~~java
+class ValidateRuntimeException extends RuntimeException{
+    ValidateRuntimeException(String msg) {
+        super(msg);
+    }
+}
+class NetworkRuntimeException extends RuntimeException{
+    NetworkRuntimeException(String msg) {
+        super(msg);
+    }
+}
 ~~~
 
 
@@ -1689,9 +1725,7 @@ com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
 
 # ✨高级\_IO_07_22
 
-## 1、File
-
-### 1.1 测试File
+## 1 测试File
 
 ~~~java
 public static void main(String[] args) {
@@ -1710,7 +1744,7 @@ true
 
 
 
-#### 1.1.2 绝对路径与相对路径
+## 2 绝对路径与相对路径
 
 - 绝对路径：绝对路径就是你的主页上的文件或目录在硬盘上真正的路径，(URL和物理路径)例如：C:/xyz/test.txt 代表了test.txt文件的绝对路径。http://www.sun.com/index.htm也代表了一个URL绝对路径。
 
@@ -1718,7 +1752,7 @@ true
 
 ​	
 
-#### 1.1.3 怎么快速地在idea中找绝对路径和相对路径
+## 3 怎么快速地在idea中找绝对路径和相对路径
 
 上图
 
@@ -1736,7 +1770,7 @@ true
 
 
 
-### 1.2流的分类
+## 4 流的分类
 
 1.按照输入输出分为 输入流 和 输出流
 2.按照传输单位分为 字节流 和 字符流
@@ -1757,7 +1791,7 @@ true
 
 ![image-20220723092004867](images/image-20220723092004867.png)
 
-### 1.3 常用API
+## 5 File常用API
 
 - file.mkdir() 创建文件夹
 - file.delete() 删除
@@ -1767,7 +1801,7 @@ true
 
 ![image-20220723084327722](images/image-20220723084327722.png)
 
-### 1.4 显示目录下所有文件
+## 6 显示目录下所有文件
 
 ~~~java
 public static void main(String[] args) {
@@ -1802,7 +1836,7 @@ post-update.sample
 
 
 
-### 1.5 匿名内部类+过滤器FilenameFilter
+## 7 匿名内部类+过滤器FilenameFilter
 
 接口名就是类型，而{}中的逻辑，就是一个动态代码块，里面是接口中所有抽象方法的具体实现
 
@@ -1828,10 +1862,9 @@ static FilenameFilter filter = new FilenameFilter() {
     };
 ~~~
 
+## 8 字节流实现copy
 
-### 1.6 字节流实现copy
-
-#### 1.5.1 FileInputStream+FileOutputStream
+### 8.1 FileInputStream+FileOutputStream
 
 ![image-20220723085026185](images/image-20220723085026185.png)
 
@@ -1864,7 +1897,7 @@ static FilenameFilter filter = new FilenameFilter() {
     }
 ~~~
 
-#### 1.5.2 BufferedInputStream+BufferedOutputStream(有缓存区更快)
+### 8.2 BufferedInputStream+BufferedOutputStream(有缓存区更快)
 
 ![image-20220723084904070](images/image-20220723084904070.png)
 
@@ -1891,7 +1924,7 @@ static FilenameFilter filter = new FilenameFilter() {
 
 
 
-### 1.7 字符流实现写文件
+## 9 字符流实现写文件
 
 BufferedWriter+BufferedWriter
 
@@ -1922,6 +1955,10 @@ append – boolean if true, then data will be written to the end of the file rat
         }
     }
 ~~~
+
+
+
+
 
 
 
