--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1520,7 +1520,7 @@ class MySub2 extends MySub{
 
 ### 2.2使用方法
 
-#### 🎨exception+try-catch
+#### 2.2.1 exception+try-catch
 
 **try表示定义一个受到监控、受到保护的程序代码块**；
 
@@ -1541,7 +1541,7 @@ public class TestException {
 
 
 
-#### 🎨finally语句块
+#### 2.2.2 finally语句块
 
 finally语句块无论是否发生异常，都会执行。
 
@@ -1576,7 +1576,7 @@ static int test(boolean flag) {
 
 
 
-#### 🎨thorw抛出异常
+#### 2.2.3 thorw抛出异常
 
 手动抛出运行时异常：**throw** new XXXXXX
 
@@ -1589,7 +1589,7 @@ RuntimeException
 }
 ~~~
 
-#### 🎨throws方法声明异常
+#### 2.2.4 throws方法声明异常
 
 将当前方法中的异常交给调用者处理**：throws** Exception
 
@@ -1603,7 +1603,7 @@ public class Account {
 }
 ~~~
 
-#### 🎨自定义异常
+#### 2.2.5 自定义异常
 
 ~~~java
 class ValidateRuntimeException extends RuntimeException{
